# music_info

./: Cargo.toml
.devcontainer/: Dockerfile  devcontainer.json
src/: fileio.rs  info_struct.rs  lib.rs  main.rs  net.rs  traits.rs
src/fileio/: json.rs  picture.rs  taglib.rs  taglib_pic.rs
src/net/: music_brainz.rs  oauth2.rs  spotify.rs
src/net/music_brainz/: inner_structs.rs
src/net/spotify/: inner_structs.rs
