[package]
name = "music_info"
version = "0.3.0"
authors = ["kimotu4632uz <32472396+kimotu4632uz@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = "2.33"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ureq = { version = "2.1", features = ["json"] }
oauth2 = { version = "4.0.0", default-features = false, features = ["ureq"] }
taglib = "1.0.0"
taglib_picture = { git = "https://github.com/kimotu4632uz/rust-taglib-picture" }
mime_guess = "2.0.3"
dirs = "3.0"