[package]
name = "music_info"
version = "0.4.1"
authors = ["kimotu4632uz <32472396+kimotu4632uz@users.noreply.github.com>"]
edition = "2021"

[dependencies]
anyhow = { version = "1.0.68", features = ["backtrace"] }
clap = "4.0.29"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ureq = { version = "2.1", features = ["json"] }
oauth2 = { version = "4.0.0", default-features = false, features = ["ureq"] }

taglib = "1.0.0"
taglib_picture = { git = "https://github.com/kimotu4632uz/rust-taglib-picture" }

mime_guess = "2.0.3"
dirs = "3.0"
